--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             <p><strong>1. Title of Your Paper</strong>. Journal of Computer Science, Year.</p>
             <p><strong>2. Another Paper You Wrote</strong>. International Conference on AI, Year.</p>
         </div>
+
+        <h2>Curriculum Vitae</h2>
+        <p>Download my CV: <a href="Resume.pdf" download>Curriculum Vitae (PDF)</a></p>
         
         <h2>Contact Information</h2>
         <p>If you'd like to get in touch or discuss potential collaborations, please feel free to contact me via email at <a href="mailto:youremail@example.com">youremail@example.com</a>.</p>
