--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <h2>Curriculum Vitae</h2>
-        <p>Download my CV: <a href="Resume.pdf" download>Jiexing Liu CV Link (PDF)</a></p>
+        <p>Download my CV: <a href="Resume.pdf" download>CV(PDF)</a></p>
         
         <h2>Contact Information</h2>
         <p>If you'd like to get in touch or discuss potential collaborations, please feel free to contact me via email at <a href="mailto:youremail@example.com">youremail@example.com</a>.</p>
