--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         
         <h2>Contact Information</h2>
         <p>If you'd like to get in touch or discuss potential collaborations, please feel free to contact me via email at <a href="mailto:youremail@example.com">youremail@example.com</a>.</p>
+
+        <div class="image-container">
+            <img src="Dive.jpg" alt="Lau">
+        </div>
     </div>
 </body>
 </html>
