--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +22,7 @@
         }
         h1 {
             font-size: 36px;
+            margin: 0;
         }
         .container {
             max-width: 800px;
@@ -37,14 +40,40 @@
         .publications {
             margin-top: 20px;
         }
+        .header-content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            right:9%;
+        }
+        .header-text {
+            text-align: center;
+        }
+        .header-image {
+            max-width: 100%;
+            flex: 0 0 30%;
+        }
         /* Add more CSS styles as needed */
     </style>
 </head>
+
 <body>
     <header>
-        <h1>Your Name, Ph.D.</h1>
-        <p>Assistant Professor of Computer Science<br>University of Academic Excellence</p>
+        <div class="header-content">
+
+            <div class="header-image">
+                <img src="Dive.jpg" alt="Lau" width="300">
+            </div>
+
+            <div class="header-text">
+                <h1>Your Name, Ph.D.</h1>
+                <p>Assistant Professor of Computer Science<br>University of Academic Excellence</p>
+            </div>
+
+        </div>
     </header>
+
     <div class="container">
         <h2>About Me</h2>
         <p>Welcome to my academic profile. I'm an Assistant Professor of Computer Science at the University of Academic Excellence. My research interests include artificial intelligence, machine learning, and data science.</p>
@@ -67,10 +96,7 @@
         
         <h2>Contact Information</h2>
         <p>If you'd like to get in touch or discuss potential collaborations, please feel free to contact me via email at <a href="mailto:youremail@example.com">youremail@example.com</a>.</p>
-
-        <div class="image-container">
-            <img src="Dive.jpg" alt="Lau">
-        </div>
     </div>
 </body>
+
 </html>
